28 January 2008: Wouter
	- fixup uninit use of buffer by libunbound (query id, flags) for
	  local_zone answers.
	- fixup uninit warning from random.c; also seems to fix sporadic
	  sigFPE coming out of openssl.

25 January 2008: Wouter
	- added tpkg for asynclook and library use. 
	- allows localhost to be queried when as a library.
	- fixup race condition between cancel and answer (in case of
	  really fast answers that beat the cancel).
	- please doxygen, put doxygen comment in one place.
	- asynclook -b blocking mode and test.
	- refactor asynclook, nicer code.
	- fixup race problems from opensll in rand init from library, with
	  a mutex around the rand init.
	- fix pass async_id=NULL to _async resolve().
	- rewrote _wait() routine, so that it is threadsafe.
	- cancelation is threadsafe.
	- asynclook extended test in tpkg.
	- fixed two races where forked bg process waits for (somehow shared?)
	  locks, so does not service the query pipe on the bg side.
	  Now those locks are only held for fg_threads and for bg_as_a_thread.

24 January 2008: Wouter
	- tested the cancel() function.
	- asynclook -c (cancel) feature.
	- fix fail to allocate context actions.
	- make pipe nonblocking at start.
	- update plane for retry mode with caution to limit bandwidth.
	- fix Makefile for concurrent make of unbound-host.
	- renamed ub_val_ctx_wait/poll/process/fd to ub_val*.
	- new calls to set forwarding added to header and docs.

23 January 2008: Wouter
	- removed debug prints from if-auto, verb-algo enables some.
	- libunbound QUIT setup, remove memory leaks, when using threads
	  will share memory for passing results instead of writing it over
	  the pipe, only writes ID number over the pipe (towards the handler
	  thread that does process() ).

22 January 2008: Wouter
	- library code for async in libunbound/unbound.c.
	- fix link testbound.
	- fixup exit bug in mini_event.
	- background worker query enter and result functions.